# clawback

./: .gitignore  Anchor.toml  CLAWBACKPROTOCOL.md  Cargo.toml  PLAN.md  README.md  SUBMISSION.md  TEASER_POST.md
programs/clawback/: Cargo.toml
programs/clawback/src/: lib.rs
