[workspace]
members = [
    "programs/*"
]

resolver = "2"

# Force older blake3 version that works with Rust 1.84
[workspace.dependencies]
blake3 = "=1.5.5"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
