[package]
name = "clawback"
version = "0.1.0"
description = "Reversible USDC payments for AI agents with policy controls"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clawback"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
blake3 = "=1.5.5"
